Tentativa de corrigir o bug do overflow-x 8

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     src: url(fontes/Raleway/Raleway-VariableFont_wght.ttf);
 }
 
+wrapper{
+    overflow-x: hidden;
+}
+
 body{
     margin: 0px;
     padding: 0px;
